# Cloud-incident-agentic

./: .env.example  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: FEATURES.md  PROJECT.md  ROADMAP.md  features_add_plan.md  rust_pipeline_temporary.txt
faults/crash-loop-fault/: reset.sh  status.sh  trigger.sh
faults/dlq-fault/: reset.sh  status.sh  trigger.sh
faults/hot-shard-fault/: load.sh  reset.sh  status.sh  trigger.sh
faults/network-degradation-fault/: reset.sh  status.sh  trigger.sh
faults/network-partition-fault/: reset.sh  status.sh  trigger.sh
faults/oom-kill-fault/: reset.sh  status.sh  trigger.sh
faults/rate-limit-fault/: load.sh  reset.sh  status.sh  trigger.sh
faults/redis-outage-fault/: reset.sh  status.sh  trigger.sh
faults/slow-request-fault/: load.sh  reset.sh  status.sh  trigger.sh
infrastructure/postgres/: init.sql
infrastructure/prometheus/: prometheus.yml
scripts/: traffic.sh
services/agent/: Dockerfile  README.md  requirements.txt
services/agent/agent/: __init__.py  __main__.py  tools.py  (+4 more)
services/kafka-consumer/: Cargo.toml  Dockerfile
services/kafka-consumer/src/: main.rs
services/log-pipeline/: Cargo.toml  Dockerfile  METRICS.md
services/log-pipeline/src/: docker_events.rs  docker_logs.rs  log_parser.rs  main.rs  metrics.rs
services/mem-pressure/: Dockerfile  mem_pressure.c
services/mission-control/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.server.json  vite.config.ts
services/tc-fault/: Dockerfile  tc_fault.c
services/worker/: Cargo.toml  Dockerfile
services/worker/src/: main.rs
(+30 files in other folders)
