[package]
name = "kafka-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka          = { version = "0.36", features = ["cmake-build"] }
tokio            = { version = "1",    features = ["full"] }
serde            = { version = "1",    features = ["derive"] }
serde_json       = "1"
rand             = "0.8"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
