[package]
name = "log-pipeline"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
tokio          = { version = "1",    features = ["full"] }
bollard        = { version = "0.17", default-features = false, features = ["rustls"] }
futures-util   = "0.3"
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
prometheus     = "0.13"
lazy_static    = "1"
axum           = "0.7"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
