[package]
name    = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio              = { version = "1",    features = ["full"] }
redis              = { version = "0.25", features = ["aio", "tokio-comp"] }
sqlx               = { version = "0.7",  features = ["runtime-tokio-rustls", "postgres"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter", "json"] }
